# aoc2015rust

./: Cargo.toml  flake.nix
src/: main.rs
src/template/commands/: mod.rs  scaffold.rs
